--- a/content/post/catalogs-in-flink-sqla-primer.adoc
+++ b/content/post/catalogs-in-flink-sqla-primer.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Apache Flink
 image: "/images/2024/02/daniel-forsman-ST4jAHVCEZQ-unsplash.sm.webp"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/catalogs-in-flink-sql-a-primer"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/catalogs-in-flink-sql-a-primer[Decodable blog].
@@ -48,7 +50,7 @@ Completely separate from this ambiguous mish-mash of catalog meanings is the muc
 These literally catalog your data, less for the purpose of supporting query engines but more from a governance, discoverability, and audit/compliance point of view.
 
 
-=== We Never Said That This Would Be Easy
+== We Never Said That This Would Be Easy
 The fun thing about running Flink SQL for yourself is that you get to run Flink SQL for yourself.
 The less fun thing is that you have to run Flink SQL for yourself 😉
 
@@ -59,7 +61,7 @@ If you're doing this locally then whether you like it or not you're going to hav
 In this blog series I'm going to walk you through examples of setting up and using Catalogs in Flink SQL, and also point out some of the fun Java stuff along the way, usually involving JARs, CLASSPATHs, and occasionally some wailing and gnashing of teeth.
 
 
-=== Flink's Default In-Memory Catalog
+== Flink's Default In-Memory Catalog
 Let's get started!
 Out of the box, Flink is pre-configured with an in-memory catalog.
 That means that when you create a table, it stores it and you can see it when you list the available tables.
@@ -238,7 +240,7 @@ As we noted above: the default catalog doesn't persist metadata across sessions,
 Let's now look at the options available for us to store this metadata properly.
 
 
-=== Flink Catalog Types
+== Flink Catalog Types
 The Flink project includes link:https://nightlies.apache.org/flink/flink-docs-release-1.18/docs/dev/table/catalogs/#catalog-types[three types of catalog] , but confusingly they're all a bit different.
 
 * link:https://nightlies.apache.org/flink/flink-docs-release-1.18/docs/dev/table/catalogs/#genericinmemorycatalog[In-memory]  we've covered already. You can create and use new objects, but there's no persistence.
@@ -261,7 +263,7 @@ Other catalog implementations include:
 *  link:https://bahir.apache.org/docs/flink/current/flink-streaming-kudu#kudu-catalog[Apache Kudu]
 
 
-=== Hold on to your seats…because this gets confusing
+== Hold on to your seats…because this gets confusing
 At a minimum, each type of catalog tells Flink about objects that are *available to query*.
 Some of them also let you *define new objects*.
 And some also *persist* these definitions.
@@ -282,7 +284,7 @@ Let's look at some examples.
 * _Fun fact_: when is a JDBC Catalog not a JDBC Catalog? When one is the link:https://iceberg.apache.org/docs/latest/jdbc/#jdbc-catalog[JDBC Catalog provided by Iceberg]  to persist catalog metadata, and the other is a link:https://nightlies.apache.org/flink/flink-docs-release-1.18/docs/connectors/table/jdbc/#jdbc-catalog[JDBC Catalog provided by Flink]  to expose existing database tables for querying in Flink 😵💫
 
 
-==== You thought that was confusing?
+== You thought that was confusing?
 Just to spice things up even more, different Catalog implementations vary in how you configure the persistence implementation.
 
 Starting with the Hive catalog itself, you specify:
@@ -338,7 +340,7 @@ CREATE CATALOG c_iceberg_dynamodb WITH (
 […]
 ----
 
-==== …and breathe
+== …and breathe
 Let's zoom waaay back up to the surface here, and reorientate ourselves.
 I’m sure the reasonings and rationale for the above state of catalog implementations are good ones, but in a way it doesn't matter.
 As humble SQL monkeys we just need to know which catalog we'll use, and how to configure it.
@@ -349,7 +351,7 @@ Once we know the catalog, we can dive into the docs to understand the specific c
 And then rapidly move on to actually running Flink SQL with it, and forget we ever cared about the inconsistencies and frustrations of `CREATE CATALOG` with a `type` but that `CATALOG` whose `type` we defined also having a `catalog-type` 😉
 
 
-=== Catalog Stores: It's Metadata all the way down
+== Catalog Stores: It's Metadata all the way down
 Let's take a moment for a brief tangent.
 We've talked about tables having data, and metadata, and catalogs storing that metadata or at least pointers to it.
 But who watches the watchers?
@@ -461,7 +463,7 @@ If only life were that simple back in the land of Catalogs themselves!
 In my next post I’m going to look at the use of the Hive and JDBC catalogs that are part of Flink, as well as a couple of others in the ecosystem.
 
 
-=== Wrapping up Part One
+== Wrapping up Part One
 One of the reasons I enjoy blogging is that it forces me to get a real handle on something that I’m trying to explain.
 What started off as a big ball of very confusing mud to me has clarified itself somewhat, and I hope the above writing has done the same for your understanding of catalogs in Flink SQL too.
 
