--- a/content/post/checkpoint-chronicle-december-2023.adoc
+++ b/content/post/checkpoint-chronicle-december-2023.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Checkpoint Chronicle
 image: "/images/2023/12/checkpoint_chronicle_december2023.jpg"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/checkpoint-chronicle-december-2023"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/checkpoint-chronicle-december-2023[Decodable blog].
@@ -15,7 +17,7 @@ Your hosts and esteemed curators of said content are  link:https://twitter.com/g
 
 <!--more-->
 
-=== Stream Processing, Streaming SQL, and Streaming Databases
+== Stream Processing, Streaming SQL, and Streaming Databases
 * link:https://speakerdeck.com/jark/flink-sql-the-challenges-of-implementing-a-streaming-sql-engine?slide=21[Flink SQL: the Challenges of Implementing a Streaming SQL Engine]  As the Flink SQL Team Leader at Alibaba, Jark Wu is well placed to discuss the Challenges of Implementing a streaming SQL engine. These slides from his talk at Flink Forward 2023 cover some useful detail, including handling late data, change log events, and more.
 * link:https://www.responsive.dev/blog/guide-to-kafka-streams-rebalancing[Defense Against the Dark Art of Rebalancing in Kafka Streams]  Responsive continue their top-notch blog output with this fantastic article from Sophie Blee-Goldman going into the real nuts and bolts of Kafka Streams rebalancing, how it works, the problems it can cause—and what to do about it when it does. link:https://www.alibabacloud.com/blog/how-to-write-simple-and-efficient-flink-sql_600148[]
 * link:https://www.alibabacloud.com/blog/how-to-write-simple-and-efficient-flink-sql_600148[How to Write Simple and Efficient Flink SQL]  A useful post from Xiaolin He—one of the committers to Apache Flink and PMC member—in which they summarise their talk from Flink Forward Asia 2022.
@@ -28,7 +30,7 @@ Your hosts and esteemed curators of said content are  link:https://twitter.com/g
 * As Confluent increases their focus on Apache Flink, it's interesting to see how they now position both Kafka Streams and ksqlDB. Are one or both for the chop, or all three live in glorious harmony? In  link:https://www.kai-waehner.de/blog/2023/01/23/apache-kafka-and-apache-flink-a-match-made-in-heaven/[this article on his own blog] , Confluent's Kai Waehner discusses how he sees KStreams and Flink co-existing.
 
 
-=== Event Streaming
+== Event Streaming
 * Two lists in the “awesome-*” canon this month: +
 •  link:https://github.com/responsivedev/awesome-kafka-streams[awesome-kafka-streams]  an excellent list, recently published, of companies using Kafka Streams in production.
 +
@@ -39,23 +41,23 @@ Your hosts and esteemed curators of said content are  link:https://twitter.com/g
 * link:https://www.warpstream.com/blog/unlocking-idempotency-with-retroactive-tombstones[Unlocking Idempotency with Retroactive Tombstones]  WarpStream is a new project that offers a Kafka-compatible API with storage of data directly on S3. This blog details how they implement an idempotent producer, which helps them get one step closer to Exactly Once Semantics as offered in Kafka itself.
 
 
-=== Change Data Capture
+== Change Data Capture
 * link:https://www.decodable.co/blog/change-data-capture-breaks-encapsulation-does-it-though[“Change Data Capture Breaks Encapsulation”. Does it, though?]  Gunnar examines what data encapsulation means in the context of CDC, whether it actually breaks it—and how data contracts have an important role to play.
 * The  link:https://debezium.io/documentation/reference/stable/connectors/jdbc.html[Debezium connector for JDBC]  was added earlier this year in the 2.2 release but many people are still unaware of it. It adds a Kafka Connect _sink_ capability to what had to-date only dealt with _sources_. As you’d expect it’s fully aware of the data structures that Debezium uses, making it easier to stream from one database to another. It’s also Apache 2.0 licensed.
 * link:https://www.morling.dev/blog/can-debezium-lose-events/[Can Debezium Lose Events?]  Not unless you screw things up on the source database side! Gunnar provides a useful explainer on what could, in theory, lead to events being lost—and how to avoid it.
 
 
-=== Data Platforms and Architecture
+== Data Platforms and Architecture
 * link:https://blog.schmizz.net/disaggregated-wal[The disaggregated write-ahead log]  An interesting thought experiment from Shikhar Bhushan in which they describe S2 (the Stream Store)—the equivalent of S3 for logs. This would be a truly serverless API, single-digit-milliseconds to tail and append, for a practically unlimited number of them with bottomless storage and elastic throughput.
 * link:https://materializedview.io/p/durable-execution-justifying-the-bubble[Durable Execution: Justifying the Bubble]  A useful roundup from Chris Riccomini on what he describes as “workflow orchestration with transactional state management”, covering technologies including Temporal, Restate, and more.
 
 
-=== Data Ecosystem
+== Data Ecosystem
 * link:https://www.youtube.com/watch?v=jMFMEk8jFu8[Netflix’s journey to an Apache Iceberg–only data lake]  Fascinating talk from AWS re:Invent 2023 in which Ashwin Kayyoor and Rakesh Veeramacheneni discuss at the tooling that Netflix have built around Apache Iceberg and their project to migrate over a million Apache Hive tables and 300PB of data to Apache Iceberg, yielding multiple benefits including 25% cost reduction.
 * link:https://rocksdb.org/blog/2023/11/06/java-jni-benchmarks.html[RockDB - Java API Performance Improvements]  Details of some performance analysis work done on using Java with RocksDB, including recommendations for optimisations when using the API
 
 
-=== FLIP Foyer
+== FLIP Foyer
 link:https://cwiki.apache.org/confluence/display/Flink/Flink+Improvement+Proposals[Flink Improvement Proposals] , or FLIP for short, are the process of the Flink community for discussing and working towards major changes in the project, such as new features, redesigns, deprecations, etc.
 Here are some recent FLIPs worth keeping an eye on:
 
@@ -65,7 +67,7 @@ Here are some recent FLIPs worth keeping an eye on:
 * link:https://lists.apache.org/thread/o7klnbsotmmql999bnwmdgo56b6kxx9l[[PROPOSAL] Contribute Flink CDC Connectors project to Apache Flink]  While it’s not a formal FLIP yet, this proposal by Leonard Xu must not be missed. With most of its connectors being based on Debezium, Flink CDC plays a vital role for many real-time data integration use cases, and making it part of Apache Flink itself will be a great step for further growing this project and its community.
 
 
-=== KIP Corner
+== KIP Corner
 As the counterpart to Flink’s FLIPs,  link:https://cwiki.apache.org/confluence/display/kafka/kafka+improvement+proposals[Kafka Improvement Proposals] , known as KIPs, are how the Apache Kafka community discusses and agrees on new functionality in Kafka.
 This month we’ve got three under discussion that caught our attention:
 
@@ -77,7 +79,7 @@ This month we’ve got three under discussion that caught our attention:
 •  link:https://cwiki.apache.org/confluence/display/KAFKA/KIP-875%3A+First-class+offsets+support+in+Kafka+Connect[KIP-875: First-class offsets support in Kafka Connect]
 
 
-=== Paper of the Month
+== Paper of the Month
 📄  link:https://link.springer.com/article/10.1007/s00778-023-00814-z[A Survey on Transactional Stream Processing]
 
 Are transactional semantics the next big thing in stream processing?
@@ -86,7 +88,7 @@ provides an extensive overview on the current status quo of the space, discussin
 With 29 pages overall, it’s a somewhat longer read, but it’s time well spent, providing insight into concepts, implementation approaches, and applications of transactional stream processing systems.
 
 
-=== Events & Call for Papers (CfP)
+== Events & Call for Papers (CfP)
 * link:https://www.kafka-summit.org/events/kafka-summit-bangalore-2024/about[Kafka Summit Bengaluru]  *May 2* (CfP closes January 10th)
 * link:https://www.databricks.com/dataaisummit/call-for-presentations/[Databricks DATA + AI Summit]  *June 10–13 (*CfP closes January 5th)
 * link:https://sessionize.com/coceu-2024/[Community over Code EU]  [formerly ApacheCon EU] *June 3–5* (CfP closes January 12th)
@@ -96,7 +98,7 @@ With 29 pages overall, it’s a somewhat longer read, but it’s time well spent
 _Thanks to Floor at Aiven for sharing_ link:https://aiven.io/community/forum/t/call-for-papers-closing-soon/746[this useful conference list] _with us._
 
 
-=== New Releases
+== New Releases
 * link:https://flink.apache.org/2023/11/29/apache-flink-1.17.2-release-announcement/[Apache Flink 1.17.2]
 * link:https://flink.apache.org/2023/11/22/apache-flink-kubernetes-operator-1.7.0-release-announcement/[Apache Flink Kubernetes Operator 1.7.0]
 * link:https://flink.apache.org/2023/10/27/apache-flink-kubernetes-operator-1.6.1-release-announcement/[Apache Flink Kubernetes Operator 1.6.1]
