--- a/content/post/checkpoint-chronicle-december-2024.adoc
+++ b/content/post/checkpoint-chronicle-december-2024.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Checkpoint Chronicle
 image: "/images/2024/12/checkpoint_chronicle_december2024.webp"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/checkpoint-chronicle-december-2024"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/checkpoint-chronicle-december-2024[Decodable blog].
@@ -16,14 +18,14 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 <!--more-->
 
-=== Stream Processing, Streaming SQL, and Streaming Databases
+== Stream Processing, Streaming SQL, and Streaming Databases
 * As featured in October’s Checkpoint Chronicle, Ververica recently  link:https://www.ververica.com/blog/introducing-fluss[announced]  Fluss—a streaming storage engine. It’s now been  link:https://github.com/alibaba/fluss[released under Apache 2.0 licence] , and Yaroslav Tkachenko has  link:https://www.streamingdata.tech/p/fluss-first-impression[taken it for a spin] .
 * link:https://en.oceanbase.com/blog/14362521600[Interesting details]  of how the Chinese logistics provider KYE evaluated different stream processing engines and databases to settle on Apache Flink and OceanBase.
 * ChunTing Wu  link:https://dev.to/lazypro/apache-paimon-playground-ft-flink-and-trino-10fo[writes up]  their experience trying out Apache Paimon with Flink, Trino, and StarRocks (and helpfully  link:https://github.com/wirelessr/paimon-trino-flink-playground[shares the Docker Compose]  so you can try it too)
 * A useful peek from Lenon Rodrigues under the covers of Flink looking at  link:https://medium.com/@lenonrodrigues/data-transfer-in-apache-flink-a-comprehensive-overview-fe9dbfa99781[how and when data transfer occurs between the different processes] .
 
 
-=== Event Streaming
+== Event Streaming
 * Excellent research and analysis from RedMonk’s Kate Holterhoff in  link:https://redmonk.com/kholterhoff/2024/12/12/why-message-queues-endure-a-history/[Why Message Queues Endure: A History]
 * Strimzi 0.44 added  link:https://strimzi.io/blog/2024/11/25/autorebalancing-on-scaling/[auto-rebalancing on cluster scaling] —this article from Paolo Patierno has a good overview of how to use it. If you want to know more also check out this KubeCon NA 2024  link:https://www.youtube.com/watch?v=pj6eLTC2tv8[conference talk]  from Jakub Scholz.
 * link:https://cwiki.apache.org/confluence/display/KAFKA/KIP-853%3A+KRaft+Controller+Membership+Changes[KIP-853]  added dynamic controller quorum to Kafka in 3.9— link:https://developers.redhat.com/articles/2024/11/27/dynamic-kafka-controller-quorum[this article]  from Federico Valeri and Luke Chen at RedHat explains how KRaft clusters can now scale controller nodes without downtime.
@@ -32,7 +34,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * Apache Kafka 4.0 is scheduled for release late January/early February, and the feature freeze just passed. One of the most significant changes is the removal of ZooKeeper and marking KRaft as production ready ( link:https://cwiki.apache.org/confluence/display/KAFKA/KIP-833%3A+Mark+KRaft+as+Production+Ready[KIP-833] ). You can find the  link:https://cwiki.apache.org/confluence/display/KAFKA/Release+Plan+4.0.0[release plan here] , and also see a list of  link:https://issues.apache.org/jira/browse/KAFKA-18224?jql=project%20%3D%20KAFKA%20AND%20fixVersion%20%3D%204.0.0[included JIRAs] .
 
 
-=== Data Ecosystem
+== Data Ecosystem
 * A detailed and thorough exploration and evaluation of the  link:https://www.onehouse.ai/blog/comprehensive-data-catalog-comparison[different types of Data Catalog and their implementations]  from OneHouse’s Kyle Weller. This is a really messy space and I’m looking forward to when we have the kind of relatively stable state that we now have around the open table formats (OTF).
 * For data engineers one of the biggest bits of news from AWS re:Invent last week was the launch of  link:https://aws.amazon.com/s3/features/tables/[Amazon S3 Tables]  which hold Apache Iceberg data in a dedicated S3 bucket type. There’s been a fair bit written about them, including simple explanations, hands-on, and analysis:some text
 * link:https://aws.amazon.com/blogs/storage/build-a-managed-transactional-data-lake-with-amazon-s3-tables/[Build a managed transactional data lake with Amazon S3 Tables]  (AWS)
@@ -43,33 +45,33 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 
 
-=== Data Platforms and Architecture
+== Data Platforms and Architecture
 * I enjoyed  link:https://hex.tech/blog/rebuilding-data-warehouse-with-blue-green-deployment/[this honest writeup from Hex]  of how a data warehouse got into a bit of a mess over time, and how they rectified it with no downtime to end users.
 * If you like database internals you’ll definitely want to read  link:https://medium.com/@adamprout/categorizing-how-distributed-databases-utilize-consensus-algorithms-492c8ff9e916[this post]  from Adam Prout in which he categorises the different types of consensus algorithms that distributed databases use.
 * I’m a big fan of graph technology and thoroughly enjoyed this account of  link:https://medium.com/booking-com-development/leverage-graph-technology-for-real-time-fraud-detection-and-prevention-438336076ea5[how Booking.com use it to detect fraud in real-time] .
 * Details from Prabodh Agarwal of how Toplyne are  link:https://substack.com/@pbd1194/p-145894594[building a data lakehouse using Kafka and Apache Hudi] , including why they chose Hudi over Iceberg and Delta Lake.
 
 
-=== RDBMS and Change Data Capture
+== RDBMS and Change Data Capture
 * link:https://vondra.me/posts/postgres-performance-archaeology-olap/[Analysis]  of how Postgres’s OLAP performance has improved over time, by Tomas Vondra. It uses TPC-H and shows a 4x improvement between Postgres 8 and 18.
-* I had fun  link:https://www.decodable.co/blog/exploring-flink-cdc[exploring Flink CDC] —it’s a pretty cool thing! Also check out details of WikiMedia’s  link:https://phabricator.wikimedia.org/T373144[plans]   link:https://phabricator.wikimedia.org/T370354[for]  using it too.
+* I had fun  link:/2024/12/11/exploring-flink-cdc/[exploring Flink CDC] —it’s a pretty cool thing! Also check out details of WikiMedia’s  link:https://phabricator.wikimedia.org/T373144[plans]   link:https://phabricator.wikimedia.org/T370354[for]  using it too.
 * A useful look at  link:https://medium.com/@arijit.mazumdar/beyond-the-basics-of-debezium-for-postgresql-part-1-d1c6952ae110[how Postgres and Debezium work together] , from Arijit Mazumdar.
-* Gunnar  link:https://www.decodable.co/blog/failover-replication-slots-with-postgres-17[wrote up]  details of using failover replication slots in Postgres 17, including a nice demo of their use with Decodable’s Postgres CDC connector.
+* Gunnar  link:https://www.morling.dev/blog/failover-replication-slots-with-postgres-17/[wrote up]  details of using failover replication slots in Postgres 17, including a nice demo of their use with Decodable’s Postgres CDC connector.
 
 
-=== Papers of the Month
+== Papers of the Month
 A couple of papers from Amazon to look at this month.
 First up, their 2022 paper describing  link:https://www.amazon.science/publications/amazon-redshift-re-invented[improvements made to Redshift since its launch in 2013] , and then their paper from earlier this year  link:https://www.amazon.science/publications/why-tpc-is-not-enough-an-analysis-of-the-amazon-redshift-fleet[analysing the workloads seen on Amazon Redshift]  and looking at how they differ from the canonical TPC simulated workloads often used for benchmarking.
 
 
-=== Events & Call for Papers (CfP)
+== Events & Call for Papers (CfP)
 * link:https://ndclondon.com/[NDC London]  (London, UK) *January 27-31*
 * *Current 2025* (Bangalore, India)*March 19 (* link:https://sessionize.com/current-bengaluru-2025/[CfP open] *until December 19)*
 * *Current 2025* (London, UK)*May 20-21*
 * *Current 2025*(New Orleans, LA)*October 29-30*
 
 
-=== New Releases
+== New Releases
 * link:https://flink.apache.org/2024/11/27/apache-flink-cdc-3.2.1-release-announcement/[Apache Flink CDC 3.2.1]
 * link:https://github.com/apache/iceberg/releases/tag/apache-iceberg-1.7.1[Apache Iceberg 1.7.1]
 * link:https://downloads.apache.org/kafka/3.7.2/[Apache Kafka 3.7.2]
