--- a/content/post/checkpoint-chronicle-february-2024.adoc
+++ b/content/post/checkpoint-chronicle-february-2024.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Checkpoint Chronicle
 image: "/images/2024/02/GG8wCH9bwAAg2Mm.jpg"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/checkpoint-chronicle-february-2024"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/checkpoint-chronicle-february-2024[Decodable blog].
@@ -16,28 +18,28 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 <!--more-->
 
-=== Stream Processing, Streaming SQL, and Streaming Databases
+== Stream Processing, Streaming SQL, and Streaming Databases
 * link:https://www.linkedin.com/in/javeria2/[Sanchay Javeria]  from Pinterest describes some  link:https://medium.com/pinterest-engineering/lessons-from-debugging-a-tricky-direct-memory-leak-f638c722d9f2[lessons from debugging a tricky direct memory leak]  in Flink with a nice description of how they went about it, and some background on how Flink manages memory.
 * Another good troubleshooting story, from  link:https://www.linkedin.com/in/seth-saperstein/[Seth Saperstein]  at Lyft about  link:https://eng.lyft.com/wheres-my-data-a-unique-encounter-with-flink-streaming-s-kinesis-connector-6da3b11b164a[Flink Streaming’s Kinesis Connector] .
-* I recently set out on a seemingly-straightforward journey to understand the role of the Catalog in Flink SQL. As they say: sometimes it’s the journey that is the adventure, not the destination ;-) I wrote up my findings in two parts, covering a  link:https://decodable.co/blog/catalogs-in-flink-sql-a-primer[primer]  and then a  link:https://decodable.co/blog/catalogs-in-flink-sql-hands-on[hands-on guide] . On the subject of Flink catalogs,  link:https://www.linkedin.com/in/gordonmurray/[Gordon Murray]  had a nice little hack involving them  link:https://gordonmurray.com/data/2023/10/28/misusing-catalogs-in-apache-flink-for-labelling-jobs.html[here] .
+* I recently set out on a seemingly-straightforward journey to understand the role of the Catalog in Flink SQL. As they say: sometimes it’s the journey that is the adventure, not the destination ;-) I wrote up my findings in two parts, covering a  link:/2024/02/16/catalogs-in-flink-sqla-primer/[primer]  and then a  link:/2024/02/19/catalogs-in-flink-sqlhands-on/[hands-on guide] . On the subject of Flink catalogs,  link:https://www.linkedin.com/in/gordonmurray/[Gordon Murray]  had a nice little hack involving them  link:https://gordonmurray.com/data/2023/10/28/misusing-catalogs-in-apache-flink-for-labelling-jobs.html[here] .
 * link:https://www.linkedin.com/in/sofia-korableva-11754619a/[Sofia Korableva]  from Depop describes how they  link:https://engineering.depop.com/using-kafka-queryable-state-stores-for-connected-content-be2a25f95ae6[use the Queryable State Store in Kafka Streams] .
 
 
-=== Event Streaming
+== Event Streaming
 * A couple of good Kafka ops blogs from Zendesk.  link:https://au.linkedin.com/in/tim-cuthbertson-43057b2b[Tim Cuthbertson]  writes about  link:https://zendesk.engineering/kafka-automating-root-ca-rotation-with-vault-9bbbe07c7c6e[rotating CA roots for Kafka] , whilst  link:https://www.linkedin.com/in/rui-frankie-chen-a0a7848a/[Rui Chen]  describes how they  link:https://zendesk.engineering/seamless-transition-migrating-kafka-cluster-to-kubernetes-c8dc66594d1b?source=rss----a88376ea904a---4[migrated their Kafka Clusters from EC2 VMs to Kubernetes] .
 * link:https://www.linkedin.com/in/david-mariassy-4a881a5b/[David Mariassy]  from Shopify has a detailed description of his  link:https://medium.com/@david.mariassy/a-vision-for-managing-kafka-schemas-more-effectively-db042a1eedac[vision for managing Kafka schemas more effectively] , with a useful primer on schema compatibility too.
 * Understanding the importance of good data modeling is having a somewhat-overdue  link:https://practicaldatamodeling.substack.com/p/welcome-to-practical-data-modeling[resurgence]  in the data warehousing and analytics world, but we shouldn’t forget that events in a stream also need modeling correctly for flexibility, ease of use, and of course, accuracy.  link:https://www.linkedin.com/in/timo-dechau/[Timo Dechau]  covers this well in his nice article  link:https://substack.timodechau.com/p/eventify-everything-data-modeling[here] .
 * An excellent writeup from  link:https://www.linkedin.com/in/thomas-dangleterre/[Thomas Dangleterre]  describing  link:https://medium.com/decathlondigital/seamless-data-exchange-with-kafka-connect-and-strimzi-on-kubernetes-at-decathlon-e6f81d034535[how Decathlon implemented Kafka Connect on Strimzi]  including sinks for S3, MongoDB, and HTTP to make calls out to their telemetry platform driven by messages in a Kafka topic.
 
 
-=== Change Data Capture
+== Change Data Capture
 * The  link:https://debezium.io/roadmap/[Debezium Roadmap]  has been updated with plans for version 2.6 and later, including support for InfluxDB source, MongoDB sink, and improvements in the SQL Server connector.
 * link:https://www.linkedin.com/in/ranjit-s-59b3b512/[Ranjit Singh]  from Macquarie Bank describes the evaluation and adoption of Debezium for  link:https://medium.com/macquarie-engineering-blog/real-time-data-processing-using-change-data-capture-and-event-driven-architecture-006cf30cc449[Change Data Capture] .
 * One of the fantastic things about open-source projects is that a solution for a problem encountered by one user might be useful for another, and so it was with  link:https://www.linkedin.com/in/miguelsotomayorf/[Miguel A. Sotomayor] ’s description of  link:https://medium.com/engineering-at-birdie/diving-deeper-birdies-latest-contribution-to-debezium-open-source-project-autoset-replica-3fbfb59e58dd[Birdie’s contribution to Debezium]  for setting replica identity for postgres automatically.
 * Written by some very well known names in the stream processing space, including  link:https://www.linkedin.com/in/takidau[Tyler Adikau]  and  link:https://de.linkedin.com/in/fhueske[Fabian Hueske] , this paper describes  link:https://dl.acm.org/doi/10.1145/3589776[Incremental Processing with Change Queries in Snowflake] .
 
 
-=== Data Platforms and Architecture
+== Data Platforms and Architecture
 * If you run your own infrastructure—and even if you don’t—you should read this fascinating account by  link:https://www.linkedin.com/in/fhcloud/[Fabrice Harbulot]  and  link:https://www.linkedin.com/in/minhnguyenvan/[Minh Khoi Nguyen]  of  link:https://engineering.grab.com/an-elegant-platform[Grab’s implementation of a self-service streaming data platform]  which supports both Flink and Kafka.
 * An interesting look by Instacart’s  link:https://www.linkedin.com/in/natekupp/[Nate Kupp]  at  link:https://tech.instacart.com/the-next-era-of-data-at-instacart-e081d8dfa162[their tech stack]  which they rebuilt last year which includes Flink, Kafka, and Debezium.
 * Hadoop might be on the decline in popularity for building new data platforms but it’s still used in plenty of places—not least LinkedIn who have a mind-boggling 55,000 hosts across their big data infrastructure.  link:https://www.linkedin.com/in/anujmaurice/[Anuj Maurice]  describes how they  link:https://engineering.linkedin.com/blog/2023/deployment-of-exabyte-backed-big-data-components[implement rolling upgrades] to keep versions up to date with minimal downtime or performance impact.
@@ -45,7 +47,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * Two interesting blogs from  link:https://engineering.grab.com/rethinking-streaming-processing-data-exploration[Grab]  and  link:https://medium.com/expedia-group-tech/explore-near-real-time-streaming-data-using-a-web-ui-da116079a74a[Expedia]  covering how they solve the requirement of giving users the ability to explore real-time data.
 
 
-=== Data Ecosystem
+== Data Ecosystem
 * The Modern Data Stack is a moniker that’s been ubiquitous for several years now and one to which any data tool vendor worth its salt would try to hitch its wagon. That is, until last week, when Tristan Handy at dbt wondered out loud whether the term  link:https://roundup.getdbt.com/p/is-the-modern-data-stack-still-a["Modern Data Stack" [is] Still a Useful Idea?]  And thus spawning a series of response articles from names synonymous with the space including from  link:https://joereis.substack.com/p/everything-ends-my-journey-with-the[Joe Reiss]  and  link:https://benn.substack.com/p/the-problem-was-the-product[Benn Stancil] .
 * DocStore is a distributed database built at Uber, offering strong consistency, caching with Redis, CDC—and the ability to  link:https://www.uber.com/en-GB/blog/how-uber-serves-over-40-million-reads-per-second-using-an-integrated-cache/[serve over 40 million reads per second] .
 * Part of my fun with Flink catalogs (that I mention above) was reacquainting myself with the Hive Metastore. My former colleague Oz Katz has  link:https://lakefs.io/blog/hive-metastore-vendor-lock/[a good article]  exploring the options in this space now and looking at how some of the new ones aren’t entirely open, or have elements of vendor lock-in.
@@ -53,7 +55,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * link:https://www.linkedin.com/in/daniel-beach-6ab8b4132[Daniel Beach]  is a data engineer at Rippleshot and prolific blogger. A few of his articles that I’ve enjoyed recently are  link:https://dataengineeringcentral.substack.com/p/config-driven-pipelines[Config Driven Pipelines]  and  link:https://dataengineeringcentral.substack.com/p/are-data-contracts-for-real[Are Data Contracts For Real?]  and  link:https://dataengineeringcentral.substack.com/p/batch-vs-near-realtime-vs-streaming[Batch vs Near-Realtime vs Streaming]
 
 
-=== Papers of the Month
+== Papers of the Month
 link:https://www.linkedin.com/in/murat-demirbas-distributolog-a2233b176/[Murat Demirbas]  has a fascinating blog in which he analyses papers that have been published.
 Two papers that caught my eye recently are:
 
@@ -61,7 +63,7 @@ Two papers that caught my eye recently are:
 * link:https://arxiv.org/abs/2111.14946[Verifying Transactional Consistency of MongoDB]  (👉  link:https://muratbuffalo.blogspot.com/2024/02/verifying-transactional-consistency-of.html[Murat's analysis and commentary] )
 
 
-=== Events & Call for Papers (CfP)
+== Events & Call for Papers (CfP)
 * link:https://www.kafka-summit.org/events/kafka-summit-london-2024/about[Kafka Summit London]  is *March 19-20* and Decodable will be there. Come and say hi at our booth, and be sure to catch the three talks we’re doing at the conference:  +
 • Sharon Xie:  link:https://events.bizzabo.com/559905/agenda/session/1284949[Timing is Everything: Understanding Event-Time Processing in Flink SQL]  (Wednesday 20th 10am) +
 • Gunnar Morling:  link:https://events.bizzabo.com/559905/agenda/session/1284970[Data Contracts In Practice With Debezium and Apache Flink]  (Wednesday 20th 1pm) +
@@ -72,7 +74,7 @@ Two papers that caught my eye recently are:
 * link:https://2024.javazone.no/speakers[JavaZone]  (Oslo, Norway) *September 4-5* (CfP closes Apr 7th)
 
 
-=== New Releases
+== New Releases
 * Debezium  link:https://debezium.io/blog/2024/01/30/debezium-2-5-1-final-released/[2.5.1.Final]  and  link:https://debezium.io/blog/2024/02/13/debezium-2.6-alpha2-released/[2.6.0.Alpha2]
 * link:https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12315522&version=12353135[flink-connector-kafka v3.1.0]  and  link:https://issues.apache.org/jira/secure/ReleaseNote.jspa?projectId=12315522&version=12353483[flink-connector-mongodb 1.1.0]
 
