--- a/content/post/checkpoint-chronicle-november-2023.adoc
+++ b/content/post/checkpoint-chronicle-november-2023.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Checkpoint Chronicle
 image: "/images/2023/11/GAmkFodXIAA1JLG.jpg"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/checkpoint-chronicle-november-2023"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/checkpoint-chronicle-november-2023[Decodable blog].
@@ -52,7 +54,7 @@ These are a great reference if you want to understand the level of adoption, use
 * Replication slots not advancing in certain circumstances used to be a notorious source of headaches for users of change data capture with Postgres. The engineering team at Zalando— link:https://opensource.zalando.com/postgres-operator/docs/reference/cluster_manifest.html#change-data-capture-streams[who are heavy users of Debezium] —took a stab at addressing this, using keep-alive messages in order to address this issue. They discuss how they patched the Postgres JDBC driver in  link:https://engineering.zalando.com/posts/2023/11/patching-pgjdbc.html[this in-depth blog post] . No more unexpected WAL growth!
 
 
-=== Paper of the Month
+== Paper of the Month
 Who doesn’t love to read them a good paper?
 In this spirit, we’re going to reference one research or industry paper (either classic, or just hot off the press) in the field of data processing and streaming each month, starting with one of our all-time favourites:
 
@@ -63,14 +65,14 @@ discuss how the “pervasive use of time-varying relations, robust event-time se
 Definitely an inspiring read!
 
 
-=== New Releases
+== New Releases
 * link:https://flink.apache.org/2023/10/24/announcing-the-release-of-apache-flink-1.18/[Apache Flink 1.18]
 * link:https://github.com/ververica/flink-cdc-connectors/releases/tag/release-2.4.2[CDC Connectors for Apache Flink 2.4.2]
 * link:https://kafka.apache.org/blog#apache_kafka_360_release_announcement[Apache Kafka 3.6.0]
 * link:https://debezium.io/releases/2.5/[Debezium 2.5.0.Alpha1]  (adds support for MariaDB and Informix)
 
 
-=== Events
+== Events
 * link:https://www.kafka-summit.org/[Kafka Summit]  is into its eighth year now and will be in both London (19-20 March 2024) and Bangalore (2 May 2024) next year. The Call for Papers (CfP) is open for both, closing on  link:https://sessionize.com/kafka-summit-london-2024/[27th November (London)]  and  link:https://sessionize.com/kafka-summit-bangalore-2024/[10th January 2024 (Bangalore)] .
 
 * link:https://www.datacouncil.ai/[Data Council]  is going to take place in Austin again (26-28 March 2024).  link:https://www.datacouncil.ai/call-for-proposals[The CfP]  for it is open for just a few more days (closing on 17th November), so hurry to get your proposals in. +
