--- a/content/post/current-2024-recap.adoc
+++ b/content/post/current-2024-recap.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Current
 image: "/images/2024/09/66eca56b10da1bf158e5f1bb_66eca5140c46edd03cca4246_01.webp"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/current-2024-recap"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/current-2024-recap[Decodable blog].
@@ -52,7 +54,7 @@ The most interesting product news for me was what we already knew from the annou
 link:https://youtu.be/Sn6fVsOzrSU?feature=shared&t=4850[Jay Kreps talked about this in the keynote]  and there was some interesting technical content from WarpStream’s Richard Artoul.
 
 
-=== Decodable at Current 2024
+== Decodable at Current 2024
 
 image::/images/2024/09/66eca56b10da1bf158e5f19d_66eca5452000c513eaaf9f7b_08.webp[]
 The expo hall was a lively place with food trucks, meetup hubs—and exhibitors!
@@ -77,7 +79,7 @@ You can find the talks online here, with recordings to follow:
 * link:https://speakerdeck.com/sharonx/timing-is-everything-understanding-event-time-processing-in-flink-sql-current-24[Timing is Everything: Understanding Event-Time Processing in Flink SQL]  (Sharon Xie)
 
 
-=== So speaking of talks…
+== So speaking of talks…
 Conferences are not just about keynotes and swag—the reason many of us are there is to share knowledge by speaking and listening, and there were some really good talks at Current this year.
 Now _obviously_ the Decodable ones were excellent 😁 but here are just a few of the other stand-out sessions that we attended:  +
 _The slides and recordings are put online by Confluent after the event so keep an eye on their website_.
@@ -88,7 +90,7 @@ _The slides and recordings are put online by Confluent after the event so keep a
 * Leonard Xu, Apache Flink PMC Member and Flink CDC Lead from Alibaba Cloud provided  link:https://events.bizzabo.com/599116/agenda/session/1336739[a deep dive into the fundamental design and implementation of Flink CDC] . He discussed many important aspects of building real-time data pipelines including the challenging problem of schema evolution to synchronize upstream schema changes with downstream systems.
 
 
-=== Current in 2025
+== Current in 2025
 Current 2025 will be in Bangalore (March), London (May 20-21), and New Orleans (October 29-30).
 
 
