--- a/content/post/declarative-resource-management-for-real-time-etl-with-decodable.adoc
+++ b/content/post/declarative-resource-management-for-real-time-etl-with-decodable.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Decodable
 image: "/images/2024/08/declarative-resource-management.webp"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/declarative-resource-management"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/declarative-resource-management[Decodable blog].
@@ -37,7 +39,7 @@ It also has further uses, including:
 * Ad-hoc development—some developers will simply prefer to interact with Decodable declaratively rather than imperatively.
 
 
-=== What does declarative resource management look like?
+== What does declarative resource management look like?
 Let’s say we’d like to create a connection.
 Since we’re thinking _declaratively_ instead of _imperatively_ we create a YAML file that defines the _state_ that we’d like our Decodable account to be in:
 
@@ -107,7 +109,7 @@ We can see the same thing through the Web UI, if you prefer:
 
 image::/images/2024/08/6717dbf782a396e17c578916_6702ad654ba82bb734df7cb6_66b6977a2d7c79ba6e261574_AD_4nXcdWIPXxHmaJLI6Gqg3qjCEjskB0sDknv-lplvcUouJIQtXa6OfbN88_x8RFAEAWv52hUxtRUWsf6MSWI4tMqJAJtZCMJIgtJFuOqa4U3BbFKRByiN8tshvLNeOKPGCwUQq7tBh-zpOPoieiogvcu2be4JH.webp[]
 
-==== 🍅 You say tomato, I say potato? 🥔
+== 🍅 You say tomato, I say potato? 🥔
 So now contrast the above to the imperative approach.
 Here we tell Decodable _what to do_.
 From the CLI this would be to run a `decodable connection create […]` command.
@@ -211,7 +213,7 @@ Created connection datagen-envoy-01 (4c7c2c7d)
 …and that’s before we get onto any kind of error handling, logic branching (we’re assuming that the connection does exist, but if it doesn’t we need to skip the deletion, etc), execution control (for example, we can’t delete a running connection, so we’d have to stop it first).
 
 
-=== Storing Decodable resources in source control
+== Storing Decodable resources in source control
 You may have spotted that the YAML file we created above to define the connection is perfectly suited to storing in source control.
 
 
@@ -281,7 +283,7 @@ When working with declarative resource management in Decodable it’s important 
 
 
 
-==== Handling secrets
+== Handling secrets
 There’s one important part that we’ve not covered yet that’s going to be relevant here, and that’s how *secrets* are dealt with.
 These are used to store authentication details that are used by connections and pipelines.
 Secrets are useful for two key reasons: they avoid having to hard-code sensitive information, and they enable seamless movement between environments since the authentication details will (hopefully) be different.
@@ -346,7 +348,7 @@ result: created
 • Wrote plaintext values for secret IDs: [3554ef3b]
 ----
 
-=== CI/CD
+== CI/CD
 With our code in source control, the next step on our GitOps journey is to automate its deployment.
 The Decodable CLI can be  link:https://docs.decodable.co/cli/integrate-with-github-actions.html[run as part of a GitHub Actions workflow] .
 Common patterns that you might look to adopt here would be:
@@ -432,7 +434,7 @@ After applying a set of YAML files, resources that were running and should be wi
 Those that aren’t that should be, perhaps if they’ve just been created, will then be run.
 
 
-=== Creating YAML files
+== Creating YAML files
 So far, I’ve shown you a lot of existing YAML files and how these can be used to declare the resources that should exist on the target Decodable account.
 But how are these YAML files created?
 
@@ -573,7 +575,7 @@ decodable query --export --kind connection | \
     yq eval-all 'select(.spec.connector=="kafka")'
 ----
 
-=== Copying resources between environments
+== Copying resources between environments
 It might have occurred to you by now that if the `decodable query` command returns YAML that’s consumable by `decodable apply`, this could be a nice way to copy resources between environments—and you’d be right!
 
 You can configure  link:https://docs.decodable.co/cli/tips-and-tricks.html#using_multiple_profiles[multiple profiles]  in the Decodable CLI.
@@ -625,7 +627,7 @@ Of course, it’d probably be better practice to write the resource YAML to a fi
 But for quick ad-hoc resource migration, this works just great.
 
 
-=== Templating Resources
+== Templating Resources
 Another advantage of declarative resource management in Decodable is that it makes it easy to use templating to apply many resources of similar but slightly varying definitions.
 For example, you might have multiple Postgres databases which are logically identical but split across geographical locations.
 You want to set up each one as a connection in Decodable.
@@ -717,7 +719,7 @@ $ grep -E "\sname|hostname" connections.yaml
     hostname: location-llandudno.acme-corp.com
 ----
 
-=== Get started today!
+== Get started today!
 Declarative resource management in Decodable is, as you’ve seen above, fantastically powerful.
 Not only does it enable SDLC best-practices such as source control and GitOps, but comes with numerous other uses such as ad-hoc resource management, migration between environments, and even deleting resources.
 
