--- a/content/post/exploring-the-flink-sql-gateway-rest-api.adoc
+++ b/content/post/exploring-the-flink-sql-gateway-rest-api.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Apache Flink
 image: "/images/2024/03/rest01.jpg"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/exploring-the-flink-sql-gateway-rest-api"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/exploring-the-flink-sql-gateway-rest-api[Decodable blog].
@@ -36,7 +38,7 @@ To get started, let's bring up the Flink cluster and the SQL Gateway locally:
 ./bin/sql-gateway.sh start -Dsql-gateway.endpoint.rest.address=localhost
 ----
 
-=== Here Comes the Postman
+== Here Comes the Postman
 link:https://getpostman.com/[Postman]  is a handy tool for doing tons of useful stuff with APIs.
 Here I'm just using it to create the sample calls against the endpoints and to quickly understand how they relate to each other.
 You can use it on the web but assuming you're using a local instance of Flink (or at least, one that is not publicly accessible) then you'll want the desktop version.
@@ -92,7 +94,7 @@ _I’ve shared a copy of my Postman collection with the above variable configura
 Let's now go through the workflow of how we'd actually submit a SQL statement from scratch to the gateway.
 
 
-=== Running a SQL Statement with the Flink SQL Gateway
+== Running a SQL Statement with the Flink SQL Gateway
 In essence, the minimal steps are as follows.
 You can see link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/rest/#overview-of-sql-processing[the docs]  for more info.
 
@@ -105,7 +107,7 @@ Here's how to do each one, using HTTPie as an example client and showing the res
 I'm using bash variables to hold the values of session and operation handles.
 
 
-==== 0. Check the connection and Flink version
+== 0. Check the connection and Flink version
 
 [source,shell]
 ----
@@ -117,7 +119,7 @@ $ http --body --follow --timeout 3600 GET 'localhost:8083/info' \
 }
 ----
 
-==== 1. Create a session
+== 1. Create a session
 link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/rest/[POST /session]
 
 
@@ -199,7 +201,7 @@ il.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-
 }
 ----
 
-==== 2. Submit a SQL statement
+== 2. Submit a SQL statement
 link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/rest/[POST /sessions/:session_handle/statements]
 
 
@@ -223,7 +225,7 @@ content-type: application/json; charset=UTF-8
 $ export OPERATIONHANDLE="ba45649c-07b2-4b1c-a190-df3631b53549"
 ----
 
-==== 3. Get Statement Execution Status
+== 3. Get Statement Execution Status
 link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/rest/[GET /sessions/:session_handle/operations/:operation_handle/status]
 
 
@@ -242,7 +244,7 @@ content-type: application/json; charset=UTF-8
 }
 ----
 
-==== 4. Get Results
+== 4. Get Results
 link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql-gateway/rest/[GET /sessions/:session_handle/operations/:operation_handle/result/:token]
 
 
@@ -318,7 +320,7 @@ Because `resultType` is not `EOS` and there's a value for `nextResultUri` it tel
 }
 ----
 
-==== 5. Tidy up
+== 5. Tidy up
 Good practice is to close the session once you've finished with it:
 
 
@@ -337,7 +339,7 @@ content-type: application/json; charset=UTF-8
 }
 ----
 
-=== Using a Shell script to execute Flink SQL
+== Using a Shell script to execute Flink SQL
 We can use all of the above and a bit of bash to script this:
 
 
@@ -497,8 +499,8 @@ Greg,1
 Nice - it is exactly as expected.
 
 
-=== Where Next?
-If you want to learn more about Flink SQL you might be interested in understanding more about the  link:https://www.decodable.co/blog/catalogs-in-flink-sql-a-primer[role of the Catalog] ,  link:https://www.decodable.co/blog/catalogs-in-flink-sql-hands-on[hands-on examples]  of using the Catalog, or a deep dive into  link:https://www.decodable.co/blog/flink-sql-and-the-joy-of-jars[using JARs with Flink SQL] .
+== Where Next?
+If you want to learn more about Flink SQL you might be interested in understanding more about the  link:/2024/02/16/catalogs-in-flink-sqla-primer/[role of the Catalog] ,  link:/2024/02/19/catalogs-in-flink-sqlhands-on/[hands-on examples]  of using the Catalog, or a deep dive into  link:/2024/02/27/flink-sql-and-the-joy-of-jars/[using JARs with Flink SQL] .
 
 You might also be interested to try our Decodable which provides a fully managed Apache Flink and Debezium service.
 Our  link:https://docs.decodable.co/cli/cli-quick-start.html#_pipelines[CLI]  and  link:https://docs.decodable.co/api/control-plane.html#tag/pipeline-operations/post/pipelines[API]  both support deployment of pipelines with Flink SQL.
