--- a/content/post/how-to-get-data-from-apache-kafka-to-apache-iceberg-on-s3-with-decodable.adoc
+++ b/content/post/how-to-get-data-from-apache-kafka-to-apache-iceberg-on-s3-with-decodable.adoc
@@ -8,6 +8,8 @@ categories:
 - Apache Iceberg
 - Decodable
 image: "/images/2024/06/kafka-iceberg-decodable.webp"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/kafka-to-iceberg-with-decodable"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/kafka-to-iceberg-with-decodable[Decodable blog].
@@ -37,7 +39,7 @@ It is at the basket level, telling us for a particular transaction who the custo
 We're going to stream this to Amazon S3 in Iceberg format so that we can then build some analyses against it to answer business questions such as the number of baskets processed during the day, and volume of items sold.
 
 
-=== Step 1: Set up a connection to Kafka
+== Step 1: Set up a connection to Kafka
 Our Kafka broker has a topic called `supermarketBaskets` with data in each record that looks like this:
 
 `Key:`
@@ -124,7 +126,7 @@ At this point let's hop over to the Decodable web UI and look at the data being 
 
 image::/images/2024/06/6717dc2082a396e17c579707_666b818263d50583545649ac_AD_4nXcRcPhoe_wru5chUWqEcbT7vNzp9fI6Yp5Ncj5ZIfiVgT_fNa4hs0zQEZ7qfK4ubfiL_RCaP_pvzEp0x5hiaFSKvtSMD1dqiadh8L96ciQ8V9GmSlPhomSLhO2wf4kXZzLPJ-EKz52m_-urlrL_NyY7FcjQ.webp[CleanShot 2024-06-06 at 12.35.03@2x.png]
 
-=== Step 2: Set up a connection to Iceberg
+== Step 2: Set up a connection to Iceberg
 I've already created an S3 bucket, Glue catalog, and done the necessary IAM configuration.
 Now I just need to tell Decodable to send the data that we're ingesting from Kafka over to Iceberg by creating a sink connection:
 
@@ -189,9 +191,9 @@ $ aws s3 ls s3://rmoff/iceberg-test/rmoff.db/rmoff_basket02/data/
 […]
 ----
 
-=== Using the Iceberg data
+== Using the Iceberg data
 
-==== DuckDB
+== DuckDB
 The wonderful thing about open formats is the proliferation of support from multiple technologies that they often prompt.
 Iceberg has swept through the data ecosystem, with support from distributed compute such as Flink and Spark, and query engines including Presto, and DuckDB.
 
@@ -227,7 +229,7 @@ LIMIT 1;
 └──────────────────────┴──────────────────────┴──────────────┴──────────────────────┴──────────────────────
 ----
 
-==== Amazon Athena and Quicksight
+== Amazon Athena and Quicksight
 There are a variety of tools available for working with Iceberg data to build queries.
 With the data in S3 and wanting a web UI (rather than CLI like DuckDB above) I reached for the obvious tool— link:https://aws.amazon.com/athena/[Amazon Athena]  (which is built on PrestoDB).
 
@@ -272,12 +274,12 @@ As new sales are made in the stores, the data will flow into a Kafka topic and t
 
 image::/images/2024/06/6717dc2082a396e17c5796f5_666b8182c3f6e884ad6fefbf_AD_4nXfJJjuYnfNDdRq87E-vQMLH0KruAgoqZxKh30IfnlgatmusWo1qQx-QQzDp3uNdNAag-dKwtneg1fYEOvr_ac_8QRL5j1Do_aX5rejyNSeYhrfYmn0OA6XNOKkvKIec0idcaJr9vzblDwSBeCpJJFG2Gok.webp[]
 
-=== Learn more
+== Learn more
 Ready to dive deeper into Flink and looking to avoid some of the more common technical pitfalls?
 Check out the link:https://www.decodable.co/resource/top-5-mistakes-when-deploying-apache-flink[Top 5 Mistakes When Deploying Apache Flink] .
 
 
-=== Resources
+== Resources
 * link:https://app.decodable.co/-/accounts/create[Sign up to Decodable]  and try the Iceberg sink for free today—no credit card required.
 * link:https://docs.decodable.co/connect/source/kafka.html[Apache Kafka source connector]
 * link:https://docs.decodable.co/connect/sink/iceberg.html[Apache Iceberg sink connector]
