--- a/content/post/how-to-migrate-from-amazon-msf.adoc
+++ b/content/post/how-to-migrate-from-amazon-msf.adoc
@@ -8,6 +8,8 @@ categories:
 - Decodable
 - Amazon MSF
 image: "/images/2024/07/msf-migration.webp"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/migrating-apache-flink-jobs-from-amazon-msf-to-decodable"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/migrating-apache-flink-jobs-from-amazon-msf-to-decodable[Decodable blog].
@@ -27,7 +29,7 @@ If this sounds appealing, then the good news is that moving your Flink jobs from
 What’s more,  link:https://www.decodable.co/blog/decodable-available-from-aws-marketplace[Decodable is on the AWS Marketplace] , meaning that you can use your existing AWS credits whilst benefiting from the very best-of-breed, fully-managed Flink service!
 
 
-=== The Migration Process
+== The Migration Process
 . Download from the S3 bucket the code currently running in your MSF Flink application +
 `aws s3 cp s3://your_bucket/your_code.jar ~/your_code.jar`
 . Sign up for a  link:https://app.decodable.co/-/accounts/create[free Decodable account]
@@ -41,9 +43,9 @@ Of course, it would be somewhat disingenuous to suggest that this is _all_ there
 It’s close, but there are a few details that you’ll want to take care of along the way.
 
 
-=== Code Changes
+== Code Changes
 
-==== Handling Secrets
+== Handling Secrets
 Chances are you’ll have credentials you wouldn’t want to hard-code into your Flink application.
 Amazon MSF has its own way of  link:https://docs.aws.amazon.com/managed-flink/latest/java/best-practices.html#how-dev-bp-managing-credentials[handling credentials for Flink applications] , including using the AWS Secrets Manager.
 
@@ -51,7 +53,7 @@ When running your Flink application on Decodable, you use Decodable’s support 
 Once created, these secrets can be accessed directly on the filesystem from your code, or using the  link:https://docs.decodable.co/pipelines/create-pipelines-using-your-own-apache-flink-jobs.html#_accessing_secrets[Decodable SDK] .
 
 
-==== Runtime Configuration
+== Runtime Configuration
 There are parameters that your application will use at runtime that may be specific to an environment.
 For example, in development, the host or schema of a database being accessed may differ from that used when the application runs in production.
 Instead of hardcoding this into your Flink application and having to recompile it for each environment (which adds additional complexity and opportunity for mistakes to arise), you would define these as runtime variables.
@@ -63,7 +65,7 @@ After creating one or more configuration files and adding them to your pipeline,
 Since it’s just a file, you can use any configuration library or custom code.
 
 
-==== Job Arguments
+== Job Arguments
 With Decodable, along with configuration files, you can also pass arguments to your Flink job.
 
 You might use job arguments to specify an environment.
@@ -75,19 +77,19 @@ These can be read by your application using  link:https://nightlies.apache.org/f
 _Using job arguments also has the nice advantage that your job behaves the same during local testing as when you run it in the managed service environment—without requiring any special handling as is required  link:https://github.com/aws-samples/amazon-managed-service-for-apache-flink-taxi-consumer/blob/main/src/main/java/com/amazonaws/samples/msf/taxi/consumer/ProcessTaxiStream.java#L62-L76[on Amazon MSF] .
 
 
-=== Operations
+== Operations
 
-==== Logging
+== Logging
 While logs are typically consumed via Amazon CloudWatch when running Flink jobs on Amazon MSF, Decodable offers access to logs through a  link:https://docs.decodable.co/pipelines/create-pipelines-using-your-own-apache-flink-jobs.html#_decodable_cli[CLI] .
 Access to the Flink web interface  link:https://docs.decodable.co/pipelines/create-pipelines-using-your-own-apache-flink-jobs.html#_flink_web_dashboard[is also available]  while running jobs on Decodable, in case you have operational workflows relying on this access.
 
 
-==== Metrics
+== Metrics
 link:https://docs.decodable.co/pipelines/create-pipelines-using-your-own-apache-flink-jobs.html#_metrics[Metrics]  are written to a stream in Decodable, which you can  link:https://docs.decodable.co/streams/create-and-manage-streams.html#_manage_streams[preview]  from the CLI or web interface._
 _You can also use the stream as an input to one of the many  link:https://www.decodable.co/connectors[pre-built connectors]  that Decodable offers and then route the metric data to an external system such as  link:https://docs.decodable.co/connect/sink/datadog.html[Datadog] .
 
 
-=== Handling State (Savepoints)
+== Handling State (Savepoints)
 The state of a Flink application is preserved when the application is stopped as a savepoint.
 This can be used for rolling back after a processing error or bad data, as well as part of a migration process.
 
@@ -105,7 +107,7 @@ As part of the migration process of a production Flink application from Amazon M
 
 image::/images/2024/07/6717dbfa82a396e17c578955_66a7d087f8250f0f40c311a3_AD_4nXeah3UyUlfPBXJDvG_I4oK-pZmhDLOANgOtCgnhOPVTObnU2-1qFycnc-86c3qk9DczBbIx3spDZBPDqDejJqVGumme85i56v6eaDNpMdb_baplToGdTdNroZ1sZtwNzMfLo0sFoSks5EG6BHZfGIsLQwqe.webp[]
 
-=== Is lift-and-shift the only route?
+== Is lift-and-shift the only route?
 Just like you can lift-and-shift your on-premises deployments to run on cloud VMs, the same applies to your Flink application.
 That said, the most successful migrations are those that make full use of specific services that the cloud has to offer.
 Moving your Flink workload to Decodable will immediately give you the benefit of a more streamlined and powerful user experience; this shift can also be an opportunity to reevaluate your application design.
@@ -125,13 +127,13 @@ Similarly, if you want to send data from Flink to another system, you just write
 
 image::/images/2024/07/6717dbfe82a396e17c5789cb_66a7d087472dc2b963767a35_AD_4nXdK6_1SXz1n5cAnTcn4SrrIPCsAokD2x6fQ2ZkUdgHqwZhK9HZx1iZtHwO1JJ6Pv7HSi524dicVlIQI79-3JOxxS_J2gA0IKRpo3WBvU8LFdk3ENpzRUIp8btLOsCFX7Mq1Ru7EzctcTcNpx0W-N_Ilk2uf.webp[]
 
-=== Wrapping Up
+== Wrapping Up
 Running your Flink jobs on Decodable gives you the power and flexibility of Apache Flink, coupled with Decodable’s best-of-breed developer experience, expertise, and support.
 You can bring your jobs straight over or use Decodable’s pre-built connectors to simplify and optimize your code maintenance footprint.
 With support for both Java and PyFlink (plus SQL on its own, if you’d rather), we’ve got you covered regardless of your developer’s preferred coding language.
 
 
-=== Resources
+== Resources
 * link:https://info.decodable.co/decoding-the-top-4-real-time-data-platforms-powered-by-apache-flink[Decoding the Top 4 Real-Time Data Platforms Powered by Apache Flink] : Considerations for selecting a platform for ETL and stream processing at scale
 * link:https://info.decodable.co/ebk-the-blueprint-for-success-with-real-time-etl-data[The Blueprint for Success with Real-time Data] : Accelerate your real-time ETL, ELT, and streaming initiatives with Decodable
 * Sign up for your  link:https://app.decodable.co/-/accounts/create[free Decodable account]  today and give it a try!
