--- a/content/post/checkpoint-chronicle-march-2024.adoc
+++ b/content/post/checkpoint-chronicle-march-2024.adoc
@@ -6,6 +6,8 @@ credit: "https://bsky.app/profile/rmoff.net"
 categories:
 - Checkpoint Chronicle
 image: "/images/2024/03/GJSLG80XAAEmOtH.jpg"
+original_source: "decodable"
+original_url: "https://www.decodable.co/blog/checkpoint-chronicle-march-2024"
 ---
 
 NOTE: This post originally appeared on the link:https://www.decodable.co/blog/checkpoint-chronicle-march-2024[Decodable blog].
@@ -16,37 +18,37 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 <!--more-->
 
-=== Stream Processing, Streaming SQL, and Streaming Databases
+== Stream Processing, Streaming SQL, and Streaming Databases
 * A couple of Flink performance-related blogs from last year, with useful details of how to  link:https://getindata.com/blog/extracting-flink-flame-graph-data-offline-analysis/?utm_source=mailing&utm_medium=emailgroup&utm_campaign=flamegraph&utm_id=getindata[extract Flink Flame Graph data for offline analysis]  and tips on  link:https://blog.devgenius.io/flink-sql-performance-tuning-part-1-f71a0a0ee91[analysing and tuning Flink SQL queries] .
 * In  link:https://materializedview.io/p/from-samza-to-flink-a-decade-of-stream[From Samza to Flink: A Decade of Stream Processing]  Chris Riccomini takes us through the history of stream processing and his opinionated take on its direction today. Given that he was there at the time of Samza and the inception of Kafka Connect, he is definitely qualified to be writing about it. I enjoyed reading the article, and whilst I don’t agree with all the points, it’s well written.
 * In a similar vein to the previous item, there are some interesting thoughts (if understandably-biased ones) about streaming databases and SQL from in this interview with Materialize’s  link:https://streamingdata.substack.com/p/interview-with-nikhil-benesch-materialize[Nikhil Benesch]  that Yaroslav Tkachenko published.
 * I’ve been continuing my journey of learning Flink SQL:some text
-* Understanding  link:https://www.decodable.co/blog/flink-sql-and-the-joy-of-jars[how to install and troubleshoot JARs for Flink]  took me a while.
-* I also took a look at  link:https://www.decodable.co/blog/exploring-the-flink-sql-gateway-rest-api[the REST API of the SQL Gateway] .
+* Understanding  link:/2024/02/27/flink-sql-and-the-joy-of-jars/[how to install and troubleshoot JARs for Flink]  took me a while.
+* I also took a look at  link:/2024/03/12/exploring-the-flink-sql-gateway-rest-api/[the REST API of the SQL Gateway] .
 * Finally, I wrapped all my learnings so far up into a talk for Kafka Summit London which I gave this week. You can find  link:https://talks.rmoff.net/8VjuaU/here-be-dragons-h-h-stacktraces-flink-sql-for-non-java-developers[the slides here]  and the associated code to  link:https://github.com/decodableco/examples/blob/main/kafka-iceberg/ksl-demo.adoc[run Flink locally with Kafka and Iceberg on GitHub] .
 
 * My colleague Sharon Xie did an excellent talk, also at Kafka Summit London, on  link:https://speakerdeck.com/sharonx/timing-is-everything-understanding-event-time-processing-in-flink-sql[event time and watermarks in Flink] .
 
 
-=== Event Streaming
+== Event Streaming
 * A useful exploration of  link:https://engineering.depop.com/exploring-kafka-consumer-at-least-once-delivery-guarantees-expectations-vs-reality-36fd03e7a5e1[what Kafka’s at-least-once delivery guarantees look like in practice]  with some troubleshooting along the way.
 * Here’s a really nice performance analysis blog that does a good job tracking down  link:https://blog.allegro.tech/2024/03/kafka-performance-analysis.html[tail latencies in Kafka] .
 * An interesting writeup of  link:https://www.warpstream.com/blog/kafka-kv-store[how WarpStream has implemented support for topic compaction] .
 
 
-=== Change Data Capture
-* Gunnar published a blog last week discussing a  link:https://www.decodable.co/blog/taxonomy-of-data-change-events[Taxonomy Of Data Change Events] , and presented at Kafka Summit London this week his new talk  link:https://speakerdeck.com/gunnarmorling/data-contracts-in-practice-with-debezium-and-apache-flink-kafka-summit-london[Data Contracts In Practice With Debezium and Apache Flink] .
+== Change Data Capture
+* Gunnar published a blog last week discussing a  link:https://www.morling.dev/blog/taxonomy-of-data-change-events/[Taxonomy Of Data Change Events] , and presented at Kafka Summit London this week his new talk  link:https://speakerdeck.com/gunnarmorling/data-contracts-in-practice-with-debezium-and-apache-flink-kafka-summit-london[Data Contracts In Practice With Debezium and Apache Flink] .
 * A new set of examples from Gordon Murray showing how to use  link:https://github.com/gordonmurray/warpstream_debezium[Debezium with WarpStream] .
 
 
-=== Data Platforms and Architecture
+== Data Platforms and Architecture
 * One of my favourite talks at Kafka Summit London was a lightning talk from Gleb Shipilov in which he described  link:https://medium.com/exness-blog/streaming-data-platform-at-exness-overview-cb0ffca5844b[the streaming platform at Exness] . You can read full details over the course of four blogs including evaluation decisions in favour of Flink over Spark and ksqlDB.
 * This article is from last year, but still an interesting account of how (and why)  link:https://tech.instacart.com/building-a-flink-self-serve-platform-on-kubernetes-at-scale-c11ef19aef10[Instacart moved their Flink platform off AWS EMR and onto self-managed Flink using Kubernetes]  (on AWS EKS).
 * I really enjoyed this article on how  link:https://www.figma.com/blog/how-figmas-databases-team-lived-to-tell-the-scale/?utm_source=hackernewsletter&utm_medium=email&utm_term=data[Figma horizontally scaled their Postgres-based architecture] . It includes a really good explanation of why they stuck with Postgres despite the “obvious” alternative to scale using NoSQL (turns out relational databases _are_ useful!) or some of the newer technologies such as Spanner (too much new to learn, timescales too tight)
 * More Postgres architecture, in this article describing  link:https://www.infoq.com/articles/cloudflare-distributed-postgres/[how Cloudflare operates distributed Postgres clusters] .
 
 
-=== Data Ecosystem
+== Data Ecosystem
 * Two good articles about real-world database administration, with  link:https://github.blog/2023-12-07-upgrading-github-com-to-mysql-8-0/[GitHub.com’s migration from MySQL 5.7 to 8.0] , and the UK Government’s Digital Service’s  link:https://gds.blog.gov.uk/2024/01/17/how-we-migrated-our-postgresql-database-with-11-seconds-downtime/[migration of their PostgreSQL database]  within AWS.
 * The ecosystem around open-table formats (OTF) continues to be an interesting one, with the project formerly known as  link:https://xtable.apache.org/blog/OneTable-is-now-Apache-XTable/[OneTable now becoming Apache XTable]  (incubating). This move to an ASF project I think is really important as it defines a well-known and respected governance model. It will still be interesting to see how OTFs play out in the coming months and years—will we end up with one format simply winning outright, or will the cross-format support that XTable (and to a slight extent  link:https://docs.databricks.com/en/delta/uniform.html[Databricks’ Uniform] ) provide give the best of all worlds? Personally, I’m sceptical; I think the formats will slug it out and in the end, one or two will survive—perhaps for different use cases—and the others will either pivot or die.
 * LinkedIn has quite the pedigree for open-source projects (Apache Kafka, anyone?) and this newly open-sourced one looks interesting.  link:https://github.com/linkedin/openhouse[OpenHouse]  is described as a control plane for managed tables, and includes a  link:https://www.openhousedb.org/docs/intro/#catalog-service[catalog]  and services for  link:https://www.openhousedb.org/docs/intro/#data-services[managing Iceberg tables] .
@@ -54,19 +56,19 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 
 
-=== Papers of the Month
+== Papers of the Month
 * link:https://github.com/apache/arrow-datafusion/files/13875108/DataFusion_Query_Engine___SIGMOD_2024.pdf[Apache Arrow DataFusion: A Fast, Embeddable, Modular Analytic Query Engine]
 * link:https://arxiv.org/abs/2304.05028[An Empirical Evaluation of Columnar Storage Formats]
 
 
-=== Events & Call for Papers (CfP)
+== Events & Call for Papers (CfP)
 * link:https://program.berlinbuzzwords.de/bbuzz24/cfp[Berlin Buzzwords]  (Berlin, Germany) *June 9-11* (CfP closed)
 * link:https://2024.javazone.no/speakers[JavaZone]  (Oslo, Norway) *September 4-5* (CfP closes Apr 7th)
 * link:https://sessionize.com/current-2024/[Current '24 | The Next Generation of Kafka Summit]  (Austin, TX) *September 17-18* (CfP closed) link:https://www.flink-forward.org/berlin-2024[]
 * link:https://www.flink-forward.org/berlin-2024[Flink Forward]  (Berlin, Germany) *October 23-24* (CfP not yet announced)
 
 
-=== New Releases
+== New Releases
 A bumper batch of new releases this month:
 
 * link:https://home.apache.org/~stanislavkozlovski/kafka-3.7.0-rc4/RELEASE_NOTES.html[Apache Kafka 3.7]
